--- a/index.html
+++ b/index.html
@@ -20,47 +20,47 @@
             <div class="p">
             <div class="primarypic">
                 <span class="close">x</span>
-                <img src="img/A.JPG" alt="irtha.JPG">
+                <img src="A.JPG" alt="irtha.JPG">
                 </div>
                 
             </div>
             <div class="pic">
-                <img class="img" src="img/A.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A1.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A2.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A3.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A4.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A5.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A6.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A7.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A8.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A9.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A10.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A11.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A12.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A13.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A14.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A15.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A16.JPG" alt="irtha.JPG">
-                <img class="img" src="img/a17.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A18.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A19.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A20.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A21.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A22.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A23.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A24.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A25.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A26.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A27.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A28.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A29.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A30.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A31.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A32.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A36.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A34.JPG" alt="irtha.JPG">
-                <img class="img" src="img/A35.JPG" alt="irtha.JPG">
+                <img class="img" src="A.JPG" alt="irtha.JPG">
+                <img class="img" src="A1.JPG" alt="irtha.JPG">
+                <img class="img" src="A2.JPG" alt="irtha.JPG">
+                <img class="img" src="A3.JPG" alt="irtha.JPG">
+                <img class="img" src="A4.JPG" alt="irtha.JPG">
+                <img class="img" src="A5.JPG" alt="irtha.JPG">
+                <img class="img" src="A6.JPG" alt="irtha.JPG">
+                <img class="img" src="A7.JPG" alt="irtha.JPG">
+                <img class="img" src="A8.JPG" alt="irtha.JPG">
+                <img class="img" src="A9.JPG" alt="irtha.JPG">
+                <img class="img" src="A10.JPG" alt="irtha.JPG">
+                <img class="img" src="A11.JPG" alt="irtha.JPG">
+                <img class="img" src="A12.JPG" alt="irtha.JPG">
+                <img class="img" src="A13.JPG" alt="irtha.JPG">
+                <img class="img" src="A14.JPG" alt="irtha.JPG">
+                <img class="img" src="A15.JPG" alt="irtha.JPG">
+                <img class="img" src="A16.JPG" alt="irtha.JPG">
+                <img class="img" src="a17.JPG" alt="irtha.JPG">
+                <img class="img" src="A18.JPG" alt="irtha.JPG">
+                <img class="img" src="A19.JPG" alt="irtha.JPG">
+                <img class="img" src="A20.JPG" alt="irtha.JPG">
+                <img class="img" src="A21.JPG" alt="irtha.JPG">
+                <img class="img" src="A22.JPG" alt="irtha.JPG">
+                <img class="img" src="A23.JPG" alt="irtha.JPG">
+                <img class="img" src="A24.JPG" alt="irtha.JPG">
+                <img class="img" src="A25.JPG" alt="irtha.JPG">
+                <img class="img" src="A26.JPG" alt="irtha.JPG">
+                <img class="img" src="A27.JPG" alt="irtha.JPG">
+                <img class="img" src="A28.JPG" alt="irtha.JPG">
+                <img class="img" src="A29.JPG" alt="irtha.JPG">
+                <img class="img" src="A30.JPG" alt="irtha.JPG">
+                <img class="img" src="A31.JPG" alt="irtha.JPG">
+                <img class="img" src="A32.JPG" alt="irtha.JPG">
+                <img class="img" src="A36.JPG" alt="irtha.JPG">
+                <img class="img" src="A34.JPG" alt="irtha.JPG">
+                <img class="img" src="A35.JPG" alt="irtha.JPG">
 
             </div>
         </div>
